--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "fairwinds-assessment",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://qusaifares.github.io/fw-customers",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.0",
     "@testing-library/react": "^11.2.7",
@@ -11,7 +12,6 @@
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "bootstrap": "^5.1.3",
-    "gh-pages": "^3.2.3",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
@@ -24,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
